--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <link href="style.css" rel="stylesheet" type="text/css">
     </head>
     <body>
-        <div is="page-container">
+        <div id="page-container">
             <div class="top-signin">
                 <div class="signin-text">
                     <p>Already have an Intuit account?</p>
